--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -29,7 +29,7 @@ content_for(
             <p class="fs-4 fw-500 mb-1"><%= @speaker.role %></p>
           <% end %>
           <% if @speaker.body %>
-            <p class="fs-4 fw-500"><%= @speaker.body.name %> <% if @speaker.body.short_name != @speaker.body.name %><span class="s-body">(<%= @speaker.body.short_name %>)</span><% end %></p>
+            <p class="fs-4 fw-500 s-body"><%= @speaker.body.name %> <% if @speaker.body.short_name != @speaker.body.name %><span>(<%= @speaker.body.short_name %>)</span><% end %></p>
           <% end %>
         </div>
       </div>
